--- a/app/src/main/res/layout/frag5.xml
+++ b/app/src/main/res/layout/frag5.xml
@@ -1,109 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F3F3F3"
-    android:orientation="vertical">
+    android:background="#F3F3F3">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="40sp" />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="133dp"
-        android:src="@drawable/user_avatar" />
-
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="67dp"
-        android:gravity="center"
-        android:text="홍길순"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        tools:ignore="HardcodedText" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#CCCCCC" />
-
-    <Button
-        android:id="@+id/my_editUser"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="8dp"
-        android:text="정보수정
-                                             > "
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        android:background="@android:color/transparent"
-        android:elevation="0dp"
-        tools:ignore="HardcodedText" />
+        android:orientation="vertical">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#CCCCCC" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="40sp" />
 
-    <Button
-        android:id="@+id/my_contact"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="문의하기                                                >"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        android:background="@android:color/transparent"
-        android:elevation="0dp"
-        tools:ignore="HardcodedText" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="133dp"
+            android:src="@drawable/user_avatar" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#CCCCCC" />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="67dp"
+            android:gravity="center"
+            android:text="홍길순"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText" />
 
-    <Button
-        android:id="@+id/my_report"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="신고하기                                                >"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        android:background="@android:color/transparent"
-        android:elevation="0dp"
-        tools:ignore="HardcodedText" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#CCCCCC" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#CCCCCC" />
+        <Button
+            android:id="@+id/my_editUser"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp"
+            android:text="정보수정                                       > "
+            android:gravity="left"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:background="@android:color/transparent"
+            android:elevation="0dp"
+            tools:ignore="HardcodedText" />
 
-    <Button
-        android:id="@+id/my_logout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="로그아웃                                                >"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        android:background="@android:color/transparent"
-        android:elevation="0dp"
-        tools:ignore="HardcodedText" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#CCCCCC" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#CCCCCC" />
+        <Button
+            android:id="@+id/my_contact"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="문의하기                                       >"
+            android:gravity="left"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:background="@android:color/transparent"
+            android:elevation="0dp"
+            tools:ignore="HardcodedText" />
 
-</LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#CCCCCC" />
+
+        <Button
+            android:id="@+id/my_report"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="신고하기                                       >"
+            android:gravity="left"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:background="@android:color/transparent"
+            android:elevation="0dp"
+            tools:ignore="HardcodedText" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#CCCCCC" />
+
+        <Button
+            android:id="@+id/my_logout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="로그아웃                                       >"
+            android:gravity="left"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:background="@android:color/transparent"
+            android:elevation="0dp"
+            tools:ignore="HardcodedText" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#CCCCCC" />
+
+    </LinearLayout>
+</ScrollView>
