--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -16,10 +16,10 @@
 
     <Spinner
         android:id="@+id/spinnerType"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="286dp"
+        android:layout_height="51dp"
         android:layout_below="@id/textViewType"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="16dp" />
 
     <TextView
         android:id="@+id/textViewContent"
