--- a/app/src/main/res/layout/frag3.xml
+++ b/app/src/main/res/layout/frag3.xml
@@ -1,48 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+<LinearLayout
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/announcementText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="5dp"
+        android:background="#5BE91E63"
+        android:ellipsize="marquee"
+        android:focusable="true"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:singleLine="true"
+        android:text=" ※공지사항※  한이음 프로젝트 화이팅♥ 한이음은 왜 한이음일까 가나다라마바사 에헤이"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:textSize="20sp" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="201dp"
         android:background="#0000BCD4">
 
         <ViewFlipper
             android:id="@+id/image_slide"
-            android:layout_width="0dp"
+            android:layout_width="214dp"
             android:layout_height="0dp"
-            android:layout_marginStart="53dp"
-            android:layout_marginEnd="53dp"
-            android:layout_marginBottom="207dp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView">
+            app:layout_constraintTop_toTopOf="parent">
 
         </ViewFlipper>
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="97dp"
+        android:background="@drawable/rounded_edittext_background"
+        android:backgroundTint="#2D00BCD4">
+
+        <TextView
+            android:id="@+id/top_title_text"
+            android:layout_width="match_parent"
+            android:layout_height="103dp"
+            android:layout_marginBottom="204dp"
+            android:background="#0000BCD4"
+            android:text="[금주의 인기게시물]\n 제목: 한이음\n내용: AI도 먹잘알\n작성자: 경아유혜림류민서킴"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            tools:ignore="HardcodedText" />
+
+    </FrameLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="540dp"
+        android:background="#51FFEB3B"
+        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintEnd_toStartOf="@+id/textView"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="@+id/textView5">
+
         <TextView
             android:id="@+id/textView"
-            android:layout_width="362dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="1dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="1dp"
-            android:layout_marginBottom="5dp"
-            android:background="#5BE91E63"
-            android:text="※공지사항※   한이음 프로젝트 화이팅♥"
+            android:layout_width="210dp"
+            android:layout_height="56dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="184dp"
+            android:text="공유냉장고란?"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/image_slide"
+            android:textSize="34sp"
+            app:layout_constraintBottom_toTopOf="@+id/imageView4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="276dp"
+            android:layout_height="114dp"
+            android:layout_marginStart="38dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="38dp"
+            android:layout_marginBottom="158dp"
+            android:text="공유냉장고는 누구나 자유롭게 음식을 채우거나 가져갈 수 있는 냉장고입니다. 음식과 식재료를 넣어두면 필요한 사람은 무료로 가져갈 수 있어요. 공유냉장고를 이용하면 버려지는 음식을 줄이고, 취약계층에게도 도움이 된답니다."
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.75"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:layout_constraintVertical_bias="0.073" />
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="31dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:srcCompat="@drawable/refrigerator" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
+
+</ScrollView>
