--- a/app/src/main/res/layout/frag4.xml
+++ b/app/src/main/res/layout/frag4.xml
@@ -49,8 +49,8 @@
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/main_write_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="89dp"
+            android:layout_height="97dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginTop="8dp"
@@ -58,8 +58,7 @@
             android:layout_marginBottom="8dp"
             android:src="@drawable/ic_edit"
             app:backgroundTint="#87B9DF"
-            app:tint="@null"
-            />
+            app:tint="@null" />
 
     </RelativeLayout>
 
