--- a/app/src/main/res/layout/frag5.xml
+++ b/app/src/main/res/layout/frag5.xml
@@ -22,7 +22,7 @@
             android:src="@drawable/user_avatar" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/announcementText"
             android:layout_width="match_parent"
             android:layout_height="67dp"
             android:gravity="center"
